// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InvoiceItemRow - Snapshots > should match snapshot with decimal values 1`] = `
<div
  class="group flex items-start gap-2 rounded-lg border border-zinc-800 bg-zinc-900/30 p-3 transition-colors hover:border-zinc-700 motion-safe:animate-row-enter"
  style="animation-delay: 0ms;"
>
  <div
    class="flex flex-1 gap-2 min-w-0 overflow-hidden"
  >
    <div
      class="flex-1 min-w-0"
    >
      <div
        class="w-full"
      >
        <div
          class="relative"
        >
          <input
            class="flex w-full rounded-lg border bg-zinc-900/50 px-3 py-3 text-base text-zinc-100 placeholder:text-zinc-500 transition-all duration-200 focus:outline-none focus:ring-1 focus:ring-violet-500/50 focus:border-violet-500 focus:shadow-[0_0_15px_rgba(124,58,237,0.3)] disabled:cursor-not-allowed disabled:opacity-50 border-zinc-800 h-9"
            id="test-id"
            placeholder="Item description"
            type="text"
            value="Consulting"
          />
        </div>
      </div>
    </div>
    <div
      class="w-16 flex-shrink-0"
    >
      <div
        class="w-full"
      >
        <div
          class="relative"
        >
          <input
            class="flex w-full rounded-lg border bg-zinc-900/50 px-3 py-3 text-base text-zinc-100 placeholder:text-zinc-500 transition-all duration-200 focus:outline-none focus:ring-1 focus:ring-violet-500/50 focus:border-violet-500 focus:shadow-[0_0_15px_rgba(124,58,237,0.3)] disabled:cursor-not-allowed disabled:opacity-50 border-zinc-800 h-9"
            id="test-id"
            max="99999"
            min="0.01"
            placeholder="Qty"
            step="0.01"
            type="number"
            value="2.5"
          />
        </div>
      </div>
    </div>
    <div
      class="w-24 flex-shrink-0"
    >
      <div
        class="w-full"
      >
        <div
          class="relative"
        >
          <input
            class="flex w-full rounded-lg border bg-zinc-900/50 px-3 py-3 text-base text-zinc-100 placeholder:text-zinc-500 transition-all duration-200 focus:outline-none focus:ring-1 focus:ring-violet-500/50 focus:border-violet-500 focus:shadow-[0_0_15px_rgba(124,58,237,0.3)] disabled:cursor-not-allowed disabled:opacity-50 border-zinc-800 h-9 font-mono"
            id="test-id"
            inputmode="decimal"
            maxlength="24"
            placeholder="0.00"
            type="text"
            value="75.25"
          />
        </div>
      </div>
    </div>
    <div
      class="w-28 flex-shrink-0"
    >
      <div
        class="flex h-9 w-full items-center rounded-lg border border-zinc-800 bg-zinc-950/50 px-2 font-mono text-sm text-zinc-400 overflow-hidden"
        title="188.125 USDC"
      >
        <span
          class="truncate tabular-nums flex-1 min-w-0"
        >
          188.125
        </span>
        <span
          class="ml-1 flex-shrink-0 text-xs"
        >
          USDC
        </span>
      </div>
    </div>
  </div>
  <button
    aria-label="Remove item"
    class="inline-flex cursor-pointer select-none items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium active:scale-[0.97] focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 h-9 w-9 flex-shrink-0 opacity-0 transition-opacity group-hover:opacity-100 text-zinc-500 hover:bg-red-950/20 hover:text-red-400"
  >
    <svg
      class="h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 6h18"
      />
      <path
        d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
      />
      <path
        d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
      />
      <line
        x1="10"
        x2="10"
        y1="11"
        y2="17"
      />
      <line
        x1="14"
        x2="14"
        y1="11"
        y2="17"
      />
    </svg>
  </button>
</div>
`;

exports[`InvoiceItemRow - Snapshots > should match snapshot with default state 1`] = `
<div
  class="group flex items-start gap-2 rounded-lg border border-zinc-800 bg-zinc-900/30 p-3 transition-colors hover:border-zinc-700 motion-safe:animate-row-enter"
  style="animation-delay: 0ms;"
>
  <div
    class="flex flex-1 gap-2 min-w-0 overflow-hidden"
  >
    <div
      class="flex-1 min-w-0"
    >
      <div
        class="w-full"
      >
        <div
          class="relative"
        >
          <input
            class="flex w-full rounded-lg border bg-zinc-900/50 px-3 py-3 text-base text-zinc-100 placeholder:text-zinc-500 transition-all duration-200 focus:outline-none focus:ring-1 focus:ring-violet-500/50 focus:border-violet-500 focus:shadow-[0_0_15px_rgba(124,58,237,0.3)] disabled:cursor-not-allowed disabled:opacity-50 border-zinc-800 h-9"
            id="test-id"
            placeholder="Item description"
            type="text"
            value="Web Development Services"
          />
        </div>
      </div>
    </div>
    <div
      class="w-16 flex-shrink-0"
    >
      <div
        class="w-full"
      >
        <div
          class="relative"
        >
          <input
            class="flex w-full rounded-lg border bg-zinc-900/50 px-3 py-3 text-base text-zinc-100 placeholder:text-zinc-500 transition-all duration-200 focus:outline-none focus:ring-1 focus:ring-violet-500/50 focus:border-violet-500 focus:shadow-[0_0_15px_rgba(124,58,237,0.3)] disabled:cursor-not-allowed disabled:opacity-50 border-zinc-800 h-9"
            id="test-id"
            max="99999"
            min="0.01"
            placeholder="Qty"
            step="0.01"
            type="number"
            value="10"
          />
        </div>
      </div>
    </div>
    <div
      class="w-24 flex-shrink-0"
    >
      <div
        class="w-full"
      >
        <div
          class="relative"
        >
          <input
            class="flex w-full rounded-lg border bg-zinc-900/50 px-3 py-3 text-base text-zinc-100 placeholder:text-zinc-500 transition-all duration-200 focus:outline-none focus:ring-1 focus:ring-violet-500/50 focus:border-violet-500 focus:shadow-[0_0_15px_rgba(124,58,237,0.3)] disabled:cursor-not-allowed disabled:opacity-50 border-zinc-800 h-9 font-mono"
            id="test-id"
            inputmode="decimal"
            maxlength="24"
            placeholder="0.00"
            type="text"
            value="100.50"
          />
        </div>
      </div>
    </div>
    <div
      class="w-28 flex-shrink-0"
    >
      <div
        class="flex h-9 w-full items-center rounded-lg border border-zinc-800 bg-zinc-950/50 px-2 font-mono text-sm text-zinc-400 overflow-hidden"
        title="1,005.00 USDC"
      >
        <span
          class="truncate tabular-nums flex-1 min-w-0"
        >
          1,005.00
        </span>
        <span
          class="ml-1 flex-shrink-0 text-xs"
        >
          USDC
        </span>
      </div>
    </div>
  </div>
  <button
    aria-label="Remove item"
    class="inline-flex cursor-pointer select-none items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium active:scale-[0.97] focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 h-9 w-9 flex-shrink-0 opacity-0 transition-opacity group-hover:opacity-100 text-zinc-500 hover:bg-red-950/20 hover:text-red-400"
  >
    <svg
      class="h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 6h18"
      />
      <path
        d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
      />
      <path
        d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
      />
      <line
        x1="10"
        x2="10"
        y1="11"
        y2="17"
      />
      <line
        x1="14"
        x2="14"
        y1="11"
        y2="17"
      />
    </svg>
  </button>
</div>
`;

exports[`InvoiceItemRow - Snapshots > should match snapshot with empty values 1`] = `
<div
  class="group flex items-start gap-2 rounded-lg border border-zinc-800 bg-zinc-900/30 p-3 transition-colors hover:border-zinc-700 motion-safe:animate-row-enter"
  style="animation-delay: 0ms;"
>
  <div
    class="flex flex-1 gap-2 min-w-0 overflow-hidden"
  >
    <div
      class="flex-1 min-w-0"
    >
      <div
        class="w-full"
      >
        <div
          class="relative"
        >
          <input
            class="flex w-full rounded-lg border bg-zinc-900/50 px-3 py-3 text-base text-zinc-100 placeholder:text-zinc-500 transition-all duration-200 focus:outline-none focus:ring-1 focus:ring-violet-500/50 focus:border-violet-500 focus:shadow-[0_0_15px_rgba(124,58,237,0.3)] disabled:cursor-not-allowed disabled:opacity-50 border-zinc-800 h-9"
            id="test-id"
            placeholder="Item description"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="w-16 flex-shrink-0"
    >
      <div
        class="w-full"
      >
        <div
          class="relative"
        >
          <input
            class="flex w-full rounded-lg border bg-zinc-900/50 px-3 py-3 text-base text-zinc-100 placeholder:text-zinc-500 transition-all duration-200 focus:outline-none focus:ring-1 focus:ring-violet-500/50 focus:border-violet-500 focus:shadow-[0_0_15px_rgba(124,58,237,0.3)] disabled:cursor-not-allowed disabled:opacity-50 border-zinc-800 h-9"
            id="test-id"
            max="99999"
            min="0.01"
            placeholder="Qty"
            step="0.01"
            type="number"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="w-24 flex-shrink-0"
    >
      <div
        class="w-full"
      >
        <div
          class="relative"
        >
          <input
            class="flex w-full rounded-lg border bg-zinc-900/50 px-3 py-3 text-base text-zinc-100 placeholder:text-zinc-500 transition-all duration-200 focus:outline-none focus:ring-1 focus:ring-violet-500/50 focus:border-violet-500 focus:shadow-[0_0_15px_rgba(124,58,237,0.3)] disabled:cursor-not-allowed disabled:opacity-50 border-zinc-800 h-9 font-mono"
            id="test-id"
            inputmode="decimal"
            maxlength="24"
            placeholder="0.00"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="w-28 flex-shrink-0"
    >
      <div
        class="flex h-9 w-full items-center rounded-lg border border-zinc-800 bg-zinc-950/50 px-2 font-mono text-sm text-zinc-400 overflow-hidden"
        title="0.00 USDC"
      >
        <span
          class="truncate tabular-nums flex-1 min-w-0"
        >
          0.00
        </span>
        <span
          class="ml-1 flex-shrink-0 text-xs"
        >
          USDC
        </span>
      </div>
    </div>
  </div>
  <button
    aria-label="Remove item"
    class="inline-flex cursor-pointer select-none items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium active:scale-[0.97] focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 h-9 w-9 flex-shrink-0 opacity-0 transition-opacity group-hover:opacity-100 text-zinc-500 hover:bg-red-950/20 hover:text-red-400"
  >
    <svg
      class="h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 6h18"
      />
      <path
        d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
      />
      <path
        d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
      />
      <line
        x1="10"
        x2="10"
        y1="11"
        y2="17"
      />
      <line
        x1="14"
        x2="14"
        y1="11"
        y2="17"
      />
    </svg>
  </button>
</div>
`;
